fix: correct readme examples and java native library loader